# tallerI-sudoku

./: CMakeLists.txt
src/: Makefile  adt_socket.c  adt_socket.h  adt_sudoku.c  adt_sudoku.h  adt_vector.c  adt_vector.h  client.c  client.h  errors.c  errors.h  main.c  main.h  run.sh  server.c  server.h  socket.c  socket.h  sudoku.c  sudoku.h  tp  types.h  utils.c  utils.h  vector.c  vector.h
src/entrada/archivos_entrada_605/: client.in
src/entrada/archivos_entrada_607/: client.in
src/salidas/archivos_a_comparar_605/: __client_stderr__
src/salidas/archivos_a_comparar_606/: __client_stdout__
src/salidas/archivos_a_comparar_607/: __client_stdout__
src/salidas/archivos_a_comparar_608/: __client_stdout__
src/salidas/archivos_a_comparar_609/: __client_stdout__
